tests/errors/err_04_missing_colon.tslang
desnote ========================================
desnote TEST: ERROR - Missing colon after condition
desnote Tests: erif without colon
desnote Expected: Lexer error
desnote ========================================

Deschodt Eric() -> int
    eric x = 5 -> int
    erif (x > 0)
        peric("Positive")
    deschodt 0
